kubernetes/helm-charts/open-webui/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: open-webui-gw
  namespace: open-webui
  annotations:
    cert-manager.io/issuer: open-webui-issuer
spec:
  gatewayClassName: cilium
  listeners:
  - name: http
    port: 80
    protocol: HTTP
    hostname: "open-webui.home.rushidarunte.com"
    allowedRoutes:
      namespaces:
        from: All
  - name: https
    port: 443
    protocol: HTTPS
    hostname: "open-webui.home.rushidarunte.com"
    tls:
      mode: Terminate
      certificateRefs:
      - name: open-webui-home-tls
    allowedRoutes:
      namespaces:
        from: All
